--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,13 @@
 .*
 
 .*/
+lib/BasicScreen/BasicScreen.cpp
+lib/readme.txt
+lib/BasicScreen/BasicScreen.h
+.gitignore
+.pioenvs
+.piolibdeps
+.vscode/.browse.c_cpp.db*
+.vscode/c_cpp_properties.json
+.vscode/launch.json
+.gitignore
